show/hide todo on edit button press

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/fb6064f9eb.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/main.css" type="text/css" title="styles">
     <link rel="shortcut icon" href="#" />
