--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <script src="https://kit.fontawesome.com/fb6064f9eb.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/main.css" type="text/css" title="styles">
     <link rel="shortcut icon" href="#" />
-    <title>PS || Boilerplate</title>
+    <title>To-do with React-Redux</title>
 </head>
 <body>
     <div id="app"></div>
